Minor correction in alignment

--- a/style.css
+++ b/style.css
@@ -249,26 +249,25 @@ width: 105vw;}
   justify-content: space-between;
 }
 
-.header_container{
-  display: inline-block;
-  margin: auto;
-  height: fit-content;
-}
-
-.fun_header{
+#header_container{
   display: inline-block;
   font-size: 3vw;
   text-align: center;
   font-weight: bolder;
-  margin: auto;
+  height: fit-content;
+ margin-top: 2vw;
+
+  font-family: 'Spectral', serif;
 }
+
+
 
 .codingday_container{
   margin: auto;
   display: inline-block;
   height: fit-content;
   width: 20vW;
-  margin-top: 4vW;
+  margin-top: 1vw;
 }
 .coding_dayBtn{
   display: inline-block;
@@ -293,7 +292,7 @@ width: 105vw;}
   display: block;
   width:10vw;
   height:fit-content;
-  margin-top: 5vW;
+  margin-top: 2vw;
   margin-left: 7vw;
   text-align: center;
   align-items: center;
